# fuzzy-search-py

./: .gitignore  LICENSE  readme.md  setup.cfg  setup.py
FuzzySearchPy/: FuzzySearch.py  Helper.py
FuzzySearchPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
FuzzySearchPy/FuzzySearchPy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: __init__.py
src/FuzzySearchPy.egg-info/: PKG-INFO  SOURCES.txt
src/fuzzy_search_py.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.py
