[metadata]
name = fuzzy-search-py
version = 0.0.1
description = A small example package
author = doomium-chloride
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/doomium-chloride/fuzzy-search-py
project_urls =
    Bug Tracker = https://github.com/doomium-chloride/fuzzy-search-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: WTFPL
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src