[metadata]
name = FuzzySearchPy
version = 1.0.2
description = A port of FuzzySearch from JS
author = doomium-chloride
author_email = evilsmellingliquid@gmail.com
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/doomium-chloride/fuzzy-search-py
project_urls =
    Bug Tracker = https://github.com/doomium-chloride/fuzzy-search-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: WTFPL
    Operating System :: OS Independent
[bdist_wheel]
universal=1